--- a/Normal_DATN/src/main/resources/application.properties
+++ b/Normal_DATN/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=DATN_Normal
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=Normal_DATN
 spring.datasource.username=sa
-spring.datasource.password=0907852396
+spring.datasource.password=123
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto = update
