--- a/Normal_DATN/src/main/resources/application.properties
+++ b/Normal_DATN/src/main/resources/application.properties
@@ -1,14 +1,18 @@
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=test2
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=Normal_DATN
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
 spring.datasource.username=sa
-spring.datasource.password=0907852396
+spring.datasource.password=123
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = none
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.hibernate.hbm2ddl.auto = validate
+spring.jpa.hibernate.hbm2ddl.auto = none
+
+#google
+spring.security.oauth2.client.registration.google.client-id=897533331287-1st0h111qm617dvcevfkb1li4gdl4nis.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
