--- a/Normal_DATN/pom.xml
+++ b/Normal_DATN/pom.xml
@@ -62,6 +62,12 @@
   <groupId>org.apache.tomcat.embed</groupId>
   <artifactId>tomcat-embed-jasper</artifactId>
 </dependency>
+
+<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
