--- a/Normal_DATN/src/main/resources/application.properties
+++ b/Normal_DATN/src/main/resources/application.properties
@@ -1,22 +1,11 @@
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-#spring.datasource.url=jdbc:sqlserver://localhost;databaseName=Normal_DATN
-#spring.datasource.username=sa
-#spring.datasource.password=0907852396
-#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-#spring.jpa.hibernate.ddl-auto = update
-#spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-#spring.jpa.hibernate.hbm2ddl.auto = validate
+
 
 spring.datasource.url=jdbc:sqlserver://localhost;database=Normal_DATN
 spring.datasource.username=sa
-spring.datasource.password=0907852396
-#spring.datasource.password= 123
+#spring.datasource.password=0907852396
+spring.datasource.password= 123
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto = none
