--- a/Normal_DATN/src/main/resources/application.properties
+++ b/Normal_DATN/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.thymeleaf.suffix=.html
 
 spring.datasource.url=jdbc:sqlserver://localhost;database=Normal_DATN
 spring.datasource.username=sa
-#spring.datasource.password=0907852396
-spring.datasource.password= 123
+spring.datasource.password=0907852396
+#spring.datasource.password= 123
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto = none
@@ -13,7 +13,8 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-
+logging.level.org.hibernate.stat=DEBUG
+spring.jpa.properties.hibernate.generate_statistics=true
 #google
 spring.security.oauth2.client.registration.google.client-id=1027229026251-gh5eunncpui7n5vab9ia6ulj514sscg0.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
