giao dien dat hang

--- a/Normal_DATN/src/main/resources/application.properties
+++ b/Normal_DATN/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.thymeleaf.suffix=.html
 
 spring.datasource.url=jdbc:sqlserver://localhost;database=Normal_DATN
 spring.datasource.username=sa
-spring.datasource.password=0907852396
-#spring.datasource.password= 123
+#spring.datasource.password=0907852396
+spring.datasource.password= 123
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto = none
