--- a/Normal_DATN/src/main/resources/application.properties
+++ b/Normal_DATN/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #logging.level.org.hibernate.stat=DEBUG
-
+#spring.jpa.properties.hibernate.generate_statistics=true
 #google
 spring.security.oauth2.client.registration.google.client-id=1027229026251-gh5eunncpui7n5vab9ia6ulj514sscg0.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
