--- a/Normal_DATN/pom.xml
+++ b/Normal_DATN/pom.xml
@@ -88,6 +88,14 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.10</version>
+</dependency>
+
+		
 		
 		<dependency>
     <groupId>commons-io</groupId>
